<resources>
    <string name="app_name">IPBeja Recicla</string>
    <string name="Registe">NOVO UTILIZADOR? REGISTE-SE AQUÍ!</string>
    <string name="registar">Registar</string>
    <string name="login">EFETUAR LOGIN!</string>
    <string name="n_reciclagens">Nº Reciclagens</string>
    <string name="registar_reciclagem">Registar Reciclagem</string>
    <string name="impactos">Impactos!</string>
    <string name="saber_mais">Saber Mais!</string>
    <string name="sobre">Sobre</string>
    <string name="poupancas">Poupanças</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="definicoes">Definições</string>

    <string-array name="spinnerEscolas">
        <item> Todos</item>
        <item> Agrária</item>
        <item> Educação</item>
        <item> Estig</item>
        <item> Saúde</item>
    </string-array>

    <!--SABER MAIS  J-TROCAR-->
    <string name="saberMais">Saber Mais!</string>
    <string name="tab_text_1">Vidro</string>
    <string name="tab_text_2">Papel</string>
    <string name="tab_text_3">Plastico</string>
    <string name="tab_text_4">Pilhas</string>
    <string name="tab_text_5">Metal</string>
    <!--SABER MAIS  -->

    <string-array name="spinnerTipoUtilizador">
        <item> Todos</item>
        <item> Aluno</item>
        <item> Docente</item>
        <item> Funcionário</item>
    </string-array>

    <string-array name="spinnerTipoMaterial">
        <item> Todos</item>
        <item> Plástico</item>
    </string-array>

    <string-array name="spinnerCapacidade">
        <item> Todos </item>
        <item> 0,25l </item>
        <item> 0,5l </item>
        <item> 1l </item>
    </string-array>

    <!--AUXILIAR RECONHECIMENTO J-TROCAR -->
    <string name="app_name2">Auxiliar Reconhecimento</string>
    <string-array name="spinner_capacidade">
        <item> 0,25 l </item>
        <item> 0,33 l </item>
        <item> 0,50 l </item>
        <item> 0,75 l </item>
        <item> 1,00 l </item>
        <item> 1,50 l </item>
        <item> 1,75 l </item>
        <item> 2,00 l </item>
    </string-array>

    <string-array name="spinner_tipo">
        <item> Água </item>
        <item> Refrigerante </item>
    </string-array>

    <string-array name="spinner_descrição">
        <item> Garrafa plástica </item>
        <item> Garrafa de vidro </item>
        <item> Garrafa de papel </item>
        <item> Garrafa de metal </item>
    </string-array>
    <!--AUXILIAR RECONHECIMENTO -->


    <!--REGISTAR RECICLAGEM J-TROCAR-->
    <string name="app_name3">Registar Reciclagem</string>
    <string-array name="spinner_quantidade">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
    </string-array>
    <!--REGISTAR RECICLAGEM-->


</resources>