<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <include
            android:id="@+id/mainToolBar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutInicial"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="85dp"
                    android:src="@drawable/ic_planet_earth"
                    android:textAlignment="center"></ImageView>

                <TextView
                    android:id="@+id/frase1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/n_reciclagens"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_total_recycling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:fontFamily="@font/baloo"
                    android:text="20"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:background="@color/green_light" />

            <TextView
                android:id="@+id/frase2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="27sp"
                app:layout_constraintHorizontal_bias="0.5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutInicial">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_recycling"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"

                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/pink_light">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_recycling"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/registar_reciclagem"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_recycling"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        app:srcCompat="@drawable/ic_camera" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_impacts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_light">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_impact"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/impactos"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_impact"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/ic_planet_earth" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_learn_more"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/pink_dark">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_learn_more"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/saber_mais"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_learn_more"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/ic_book" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_about"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_light">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_about"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/sobre"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_about"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        app:srcCompat="@drawable/ic_about" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>