<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAdminActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/mainToolBar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutInicial"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolBar">

            <TextView
                android:id="@+id/frase2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="27sp"
                app:layout_constraintHorizontal_bias="0.5" />
            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/green_light"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutInicial">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_statistics"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/pink_light">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_statistics"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/estatisticas"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_statistics"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        tools:srcCompat="@drawable/ic_graphic" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_settings"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/brown_dark">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ic_settings"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/definicoes"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_settings"
                        android:layout_width="110dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        tools:srcCompat="@drawable/ic_settings" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>